@@ -1,8 +1,12 @@
 2003-05-25  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_CACHE),
+	SkunkWeb/Services/ae_component.py (__initConfig): default cache
+	location was being set improperly.
+
 	* util/rpm/skunkweb.spec, util/rmp/skunkweb.init,
 	util/rpm/skunkweb.logrotate: more improvements from SR, including
-	log rotation and init scripts, now moved into uti/rpm.
+	log rotation and init scripts, now moved into util/rpm.
 
 2003-05-24  Jacob Smullyan  <smulloni@smullyan.org>
 
